# beguest-helper-room-info

./: .gitignore  README.md  TODO.md  architecture.md  compress_vedeo_first.py  compressor_video.py  handlers.py  helper.py  main.py  pyproject.toml  test.py  test_send_video.py  workBitrix.py  workFastApi.py  workGS.py  workKeyboard.py  yadisk_downloader.py  ydWork.py
