[project]
name = "beguest-helper-room-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0",
    "fast-bitrix24>=1.8.5",
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "gspread>=6.2.0",
    "loguru>=0.7.3",
    "oauth2client>=4.1.3",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
    "yadisk>=3.2.0",
]
